Improve UI controls and node file manager
